syntax = "proto3";

option csharp_namespace = "Chat";

enum UserAuthRes {
    USER_AUTH_INVALID = 0;
    USER_AUTH_OK = 1;
    USER_AUTH_DUPLICATED_NAME = 2;
    USER_AUTH_ERROR = 3;
}

message UserInfo {
    uint32 user_id = 1;
    optional string user_name = 2;
}

message CUserAuthRes {
    UserInfo user_info = 1;
    UserAuthRes auth_res = 2;
}

message SUserAuthReq {
    string user_name = 1;
}
